[package]
name = "plaintext"
edition = "2018"
description = "Plaintext encryption dummy protocol for tet-libp2p"
version = "0.27.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
license = "MIT"
repository = "https://github.com/tetcoin/tet-libp2p"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies", "network-programming", "asynchronous"]
homepage = "https://core.tetcoin.org"
documentation = "https://docs.rs/plaintext"

[dependencies]
bytes = "1"
futures = "0.3.1"
asynchronous-codec = "0.5.0"
tet-libp2p-core = { version = "0.27.0", path = "../../core" }
log = "0.4.8"
prost = "0.7"
unsigned-varint = { version = "0.6", features = ["asynchronous_codec"] }
void = "1.0.2"

[dev-dependencies]
env_logger = "0.8.1"
quickcheck = "0.9.0"
rand = "0.7"

[build-dependencies]
prost-build = "0.7"

