[package]
name = "tetsy-libp2p-pnet"
edition = "2018"
description = "Private swarm support for tetsy-libp2p"
version = "0.20.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
license = "MIT"
repository = "https://github.com/tetcoin/tetsy-libp2p"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies", "network-programming", "asynchronous"]
homepage = "https://core.tetcoin.org"
documentation = "https://docs.rs/tetsy-libp2p-pnet"

[dependencies]
futures = "0.3.1"
log = "0.4.8"
salsa20 = "0.7"
sha3 = "0.9"
rand = "0.7"
pin-project = "1.0.2"

[dev-dependencies]
quickcheck = "0.9.0"
