[package]
name = "request-response"
version = "0.10.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "Generic Request/Response Protocols"
license = "MIT"
edition = "2018"
keywords = ["tetcoin", "tetcore", "tetsy-libp2p", "crypto", "networking"]
categories = ["cryptography::cryptocurrencies", "network-programming", "asynchronous"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-libp2p"
documentation = "https://docs.rs/request-response"

[dependencies]
async-trait = "0.1"
bytes = "1"
futures = "0.3.1"
tetsy-libp2p-core = { version = "0.27.0", path = "../../core" }
tetsy-libp2p-swarm = { version = "0.28.0", path = "../../swarm" }
log = "0.4.11"
lru = "0.6"
minicbor = { version = "0.7", features = ["std", "derive"] }
rand = "0.7"
smallvec = "1.4"
unsigned-varint = { version = "0.7", features = ["std", "futures"] }
wasm-timer = "0.2"

[dev-dependencies]
async-std = "1.6.2"
tetsy-libp2p-noise = { path = "../../transports/noise" }
tetsy-libp2p-tcp = { path = "../../transports/tcp" }
libp2p-remux = { path = "../../muxers/remux" }
rand = "0.7"
