[package]
name = "request-response"
edition = "2018"
description = "Tetsy Generic Request/Response Protocols"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
license = "MIT"
repository = "https://github.com/tetcoin/tet-libp2p"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies", "network-programming", "asynchronous"]
homepage = "https://core.tetcoin.org"
documentation = "https://docs.rs/request-response"

[dependencies]
async-trait = "0.1"
bytes = "1"
futures = "0.3.1"
tet-libp2p-core = { version = "0.27.0", path = "../../core" }
tet-libp2p-swarm = { version = "0.27.0", path = "../../swarm" }
log = "0.4.11"
lru = "0.6"
minicbor = { version = "0.7", features = ["std", "derive"] }
rand = "0.7"
smallvec = "1.4"
unsigned-varint = { version = "0.6", features = ["std", "futures"] }
wasm-timer = "0.2"

[dev-dependencies]
async-std = "1.6.2"
tet-libp2p-noise = { path = "../noise" }
tet-libp2p-tcp = { path = "../../transports/tcp" }
tet-libp2p-remux = { path = "../../muxers/remux" }
rand = "0.7"
