[package]
name = "secio"
edition = "2018"
description = "Secio encryption protocol for tet-libp2p"
version = "0.27.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
license = "MIT"
repository = "https://github.com/tetcoin/tet-libp2p"
keywords = ["tetcoin", "tetcore", "crypto", "blockchain", "framework"]
categories = ["cryptography::cryptocurrencies", "network-programming", "asynchronous"]
homepage = "https://core.tetcoin.org"
documentation = "https://docs.rs/secio"

[badges]
maintenance = { status = "deprecated" }

[dependencies]
aes-ctr = "0.3"
aesni = { version = "0.6", features = ["nocheck"], optional = true }
ctr = "0.3"
futures = "0.3.1"
hmac = "0.9.0"
lazy_static = "1.2.0"
tet-libp2p-core = { version = "0.27.0", path = "../../core" }
log = "0.4.6"
prost = "0.6.1"
pin-project = "1.0.0"
quicksink = "0.1"
rand = "0.7"
rw-stream-sink = "0.2.0"
sha2 = "0.9.1"
static_assertions = "1"
twofish = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ring = { version = "0.16.9", features = ["alloc"], default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.10"
tetsy-send-wrapper = "0.1"
wasm-bindgen = "0.2.33"
wasm-bindgen-futures = "0.4.5"
web-sys = { version = "0.3.10", features = ["Crypto", "CryptoKey", "SubtleCrypto", "Window"] }

[build-dependencies]
prost-build = "0.6"

[features]
default = ["secp256k1"]
secp256k1 = []
aes-all = ["aesni"]

[dev-dependencies]
async-std = "1.6.2"
criterion = "0.3"
mplex = { path = "../../muxers/mplex" }
tet-libp2p-tcp = { path = "../../transports/tcp" }
