[package]
name = "tetsy-libp2p-noise"
version = "0.29.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "Cryptographic handshake protocol using the noise framework for tetsy-libp2p."
license = "MIT"
edition = "2018"
keywords = ["tetcoin", "tetcore", "tetsy-libp2p", "crypto", "networking"]
categories = ["cryptography::cryptocurrencies", "network-programming", "asynchronous"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-libp2p"
documentation = "https://docs.rs/tetsy-libp2p-noise"

[dependencies]
bytes = "1"
curve25519-dalek = "3.0.0"
futures = "0.3.1"
lazy_static = "1.2"
tetsy-libp2p-core = { version = "0.27.0", path = "../../core" }
log = "0.4"
prost = "0.7"
rand = "0.7.2"
sha2 = "0.9.1"
static_assertions = "1"
x25519-dalek = "1.1.0"
zeroize = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
snow = { version = "0.9.2", features = ["ring-resolver"], default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
snow = { version = "0.7.1", features = ["default-resolver"], default-features = false }

[dev-dependencies]
async-io = "1.2.0"
env_logger = "0.8.1"
tetsy-libp2p-tcp = { path = "../../transports/tcp" }
quickcheck = "0.9.0"
sodiumoxide = "0.2.5"

[build-dependencies]
prost-build = "0.7"
