[package]
name = "tetsy-libp2p-tcp"
version = "0.27.2"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "TCP/IP transport protocol for tetsy-libp2p"
license = "MIT"
edition = "2018"
keywords = ["tetcoin", "tetcore", "tetsy-libp2p", "peer-to-peer", "networking"]
categories = ["cryptography::cryptocurrencies", "network-programming", "asynchronous"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-libp2p"
documentation = "https://docs.rs/tetsy-libp2p-tcp"

[dependencies]
async-io-crate = { package = "async-io", version = "1.2.0", optional = true }
futures = "0.3.8"
futures-timer = "3.0"
if-watch = { version = "0.2.0", optional = true }
if-addrs = { version = "0.6.4", optional = true }
ipnet = "2.0.0"
libc = "0.2.80"
tetsy-libp2p-core = { version = "0.27.0", path = "../../core" }
log = "0.4.11"
socket2 = { version = "0.3.17", features = ["reuseport"] }
tokio-crate = { package = "tokio", version = "1.0.1", default-features = false, features = ["net"], optional = true }

[features]
default = ["async-io"]
tokio = ["tokio-crate", "if-addrs"]
async-io = ["async-io-crate", "if-watch"]

[dev-dependencies]
async-std = { version = "1.6.5", features = ["attributes"] }
tokio-crate = { package = "tokio", version = "1.0.1", default-features = false, features = ["net", "rt"] }
env_logger = "0.8.2"
