[package]
name = "tetsy-libp2p-mplex"
version = "0.27.1"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "Mplex multiplexing protocol for tetsy-libp2p"
license = "MIT"
edition = "2018"
keywords = ["tetcoin", "tetcore", "tetsy-libp2p", "peer-to-peer", "networking"]
categories = ["cryptography::cryptocurrencies", "network-programming", "asynchronous"]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-libp2p"
documentation = "https://docs.rs/tetsy-libp2p-mplex"

[dependencies]
bytes = "1"
futures = "0.3.1"
asynchronous-codec = "0.6"
tetsy-libp2p-core = { version = "0.27.0", path = "../../core" }
log = "0.4"
nohash-hasher = "0.2"
parking_lot = "0.11"
rand = "0.7"
smallvec = "1.4"
unsigned-varint = { version = "0.7", features = ["asynchronous_codec"] }

[dev-dependencies]
async-std = "1.7.0"
criterion = "0.3"
env_logger = "0.8"
futures = "0.3"
tetsy-libp2p-tcp = { path = "../../transports/tcp" }
plaintext = { path = "../../transports/plaintext" }
quickcheck = "0.9"
rand = "0.7"

[[bench]]
name = "split_send_size"
harness = false
